FENNEL/FARRAGO:  MacOS fixes
[git-p4: depot-paths = "//open/dev/": change = 13544]