@@ -817,7 +817,7 @@ ${farrago.test.jvmargs}
 
   <target name="populateTestSchema" depends="determineInitSql">
     <junit printsummary="yes" fork="yes" haltonerror="yes" haltonfailure="yes"
-      clonevm="yes" tempdir="${testlog.dir}" includeantruntime="no">
+      tempdir="${testlog.dir}" includeantruntime="no">
       <classpath>
          <pathelement path="${farrago.sqlline.classpath}" />
          <pathelement path="${ant.classpath}" />
@@ -1221,6 +1221,9 @@ Oracle tests were requested via oracle.test, but Oracle is not available.
     <farrago.antFork target="forked_regressionWithoutBuild"
       classpathref="test.classpath">
       <jvmargs>
+        <jvmarg line="-Xmx768m"/>
+        <jvmarg line="-Xss1536k"/>
+        <jvmarg line="-XX:MaxPermSize=256m"/>
         <jvmarg line="${assertions.jvmarg}"/>
         <jvmarg line="&FarragoSqlLineProps;"/>
         <syspropertyset>
